<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataPrivacySettingsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/PrimaryPanelCardStyle">

        <Button
            android:id="@+id/btn_tooltip_data_collection_level"
            android:layout_alignParentTop="true"
            android:text="@string/label_tooltip"
            style="@style/PrimaryTooltip" />
        <TextView
            android:id="@+id/text_data_collection_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/btn_tooltip_data_collection_level"
            android:layout_alignTop="@id/btn_tooltip_data_collection_level"
            android:text="@string/title_dataprivacy_data_collection_level"
            style="@style/H2"/>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_below="@+id/text_data_collection_level"
            android:layout_marginVertical="4dp"
            style="@style/PrimaryDivider" />

        <LinearLayout
            android:id="@+id/layout_switches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider1"
            android:layoutDirection="rtl"
            android:orientation="vertical">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_off"
                android:layout_height="50dp"
                android:layout_width="match_parent"
                android:text="@string/label_dataprivacy_dcl_off"
                android:checked="true"
                style="@style/PrimarySwitch" />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_performance"
                android:layout_height="50dp"
                android:layout_width="match_parent"
                android:text="@string/label_dataprivacy_dcl_performance"
                style="@style/PrimarySwitch"/>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_user_behavior"
                android:layout_height="50dp"
                android:layout_width="match_parent"
                android:text="@string/label_dataprivacy_dcl_userbheavior"
                style="@style/PrimarySwitch"/>

        </LinearLayout>

        <TextView
            android:id="@+id/textView_data_collection_level_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider1"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/layout_switches"
            android:layout_alignBottom="@id/layout_switches"
            android:text="@string/message_dataprivacy_off"
            style="@style/Body"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/PrimaryPanelCardStyle">

        <Button
            android:id="@+id/btn_tooltip_user_tagging"
            android:layout_alignParentTop="true"
            android:text="@string/label_tooltip"
            style="@style/PrimaryTooltip" />

        <TextView
            android:id="@+id/text_user_tagging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/btn_tooltip_user_tagging"
            android:layout_alignTop="@+id/btn_tooltip_user_tagging"
            android:text="@string/title_dataprivacy_user_tagging"
            style="@style/H2"/>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_below="@+id/text_user_tagging"
            android:layout_marginVertical="4dp"
            style="@style/PrimaryDivider" />

        <Button
            android:id="@+id/btn_tag_session"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider2"
            android:text="@string/label_dataprivacy_tag_session"
            style="@style/PrimaryButtonStyle"/>

    </RelativeLayout>

</LinearLayout>